--- a/opf.ipynb
+++ b/opf.ipynb
@@ -141,7 +141,8 @@
     "Now let's solve a demand-side problem with zero marginal cost, fixed supply, and elastic demand. For this minimal example, we make the follwing assumptions:\n",
     "- Each load submits a demand curve. The system operator accepts the maximum-price bid until the renewable output is met.\n",
     "- Each load can consume as much power as desired.\n",
-    "- For each load, elasticity is constant. That is, the marginal benefit curve for load $i$ is given by $MB_i(P)=K_iP^{e_i-1}$, where $-1<e_i<0$ is the elasticity.\n",
+    "- For each load, elasticity is constant. That is, the marginal benefit curve for load $i$ is given by $MB_i(P)=K_iP^{e_i}$, where $-1<e_i<0$ is the elasticity. Note that this formulation insures that marginal benefit is always positive.\n",
+    "\n",
     "For simplicity, suppose each generator supplies its optimal output from the supply-side problem."
    ]
   },
