fixed error in calculation of K

--- a/opf.ipynb
+++ b/opf.ipynb
@@ -194,7 +194,7 @@
    "source": [
     "e = -0.2\n",
     "price = 13.68\n",
-    "K = base*p_d[:len(L)]**e/price"
+    "K = price/(base*p_d[:len(L)])**e"
    ]
   },
   {
@@ -213,7 +213,7 @@
     {
      "data": {
       "text/plain": [
-       "1226.1022239383628"
+       "5471.9999954827745"
       ]
      },
      "execution_count": 9,
@@ -250,7 +250,7 @@
     {
      "data": {
       "text/plain": [
-       "array([192.81677209,  51.42545795,  96.42086215,  59.33690782])"
+       "array([ 40.00603562, 149.98419622,  80.0120938 , 129.9976744 ])"
       ]
      },
      "execution_count": 10,
