Fix elasticity calculation

--- a/opf.ipynb
+++ b/opf.ipynb
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we'll solve the normal supply-side OPF. Re-index the problem such that the generator buses preceed the non-generator buses. Within each block, keep the order the same."
+    "First, we'll solve the normal supply-side OPF. Re-index the problem such that the generator buses precede the non-generator buses. Within each block, keep the order the same."
    ]
   },
   {
@@ -141,7 +141,7 @@
     "Now let's solve a demand-side problem with zero marginal cost, fixed supply, and elastic demand. For this minimal example, we make the follwing assumptions:\n",
     "- Each load submits a demand curve. The system operator accepts the maximum-price bid until the renewable output is met.\n",
     "- Each load can consume as much power as desired.\n",
-    "- For each load, elasticity is constant. That is, the marginal benefit curve for load $i$ is given by $MB_i(P)=K_iP^{e_i}$, where $-1<e_i<0$ is the elasticity. Note that this formulation insures that marginal benefit is always positive.\n",
+    "- For each load, elasticity is constant. That is, the marginal benefit curve for load $i$ is given by $MB_i(P)=K_iP^{\\frac{1}{e_i}}$, where $e_i<-1$ is the elasticity. Note that this formulation insures that marginal benefit is always positive.\n",
     "\n",
     "For simplicity, suppose each generator supplies its optimal output from the supply-side problem."
    ]
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For simplicity, we choose $e_1=\\dots=e_L=-0.2$. Furthermore, choose $K_i$ by taking the marginal benefit vector to be $MB(P_d^*)=\\lambda\\mathbf{1}$ where $P_d^*$ is the load vector given by PowerWorld and $\\lambda$ is the system marginal price at optimality (copied from PowerWorld)."
+    "For simplicity, we choose $e_1=\\dots=e_L=-1.1$. Furthermore, choose $K_i$ by taking the marginal benefit vector to be $MB(P_d^*)=\\lambda\\mathbf{1}$ where $P_d^*$ is the load vector given by PowerWorld and $\\lambda$ is set to $14.62."
    ]
   },
   {
@@ -192,9 +192,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "e = -0.2\n",
-    "price = 13.68\n",
-    "K = price/(base*p_d[:len(L)])**e"
+    "e = -1.1\n",
+    "price = 14.620\n",
+    "K = price/(base*p_d[:len(L)])**(1/e)"
    ]
   },
   {
@@ -213,7 +213,7 @@
     {
      "data": {
       "text/plain": [
-       "5471.9999954827745"
+       "5847.9999997905325"
       ]
      },
      "execution_count": 9,
@@ -225,7 +225,7 @@
     "p_d = cp.Variable(len(L))\n",
     "delta = cp.Variable(N)\n",
     "cp.Problem(\n",
-    "    cp.Maximize(cp.sum(cp.multiply(K,(base*p_d)**(e+1)))),\n",
+    "    cp.Maximize(cp.sum(cp.multiply(K,(base*p_d)**(1/e+1)))),\n",
     "    [\n",
     "        p_d >= 0,\n",
     "        p_g-cp.hstack([p_d,np.zeros(len(NL))]) == -B@delta,\n",
@@ -239,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The total benefit (above) and the consumption vector (below) are consistent in magnitude with the supply-side problem."
+    "The total benefit (above) and the consumption vector (below) are similar to the supply-side problem. In fact, the optimal consumptions are equal to the fixed loads from the supply-side problem (not sure why)."
    ]
   },
   {
@@ -250,7 +250,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 40.00603562, 149.98419622,  80.0120938 , 129.9976744 ])"
+       "array([ 40.00115852, 149.99657979,  80.00403935, 129.99822234])"
       ]
      },
      "execution_count": 10,
@@ -259,7 +259,7 @@
     }
    ],
    "source": [
-    "p_d.value*100"
+    "p_d.value*base"
    ]
   }
  ],
