--- a/opf.ipynb
+++ b/opf.ipynb
@@ -46,8 +46,10 @@
     "# Number of buses\n",
     "N = Y.shape[0]\n",
     "\n",
-    "# Susceptance matrix. Recall in DC power flow, G = 0\n",
-    "B = np.imag(Y)\n",
+    "# Susceptance matrix. Recall in DC power flow, G = 0 and shunt admittances are zero.\n",
+    "B = np.array(np.imag(Y))\n",
+    "B = B - np.diag(np.diag(B))\n",
+    "B = B - np.diag(np.sum(B, axis=0))\n",
     "\n",
     "# System base, in MVA\n",
     "base = 100\n",
@@ -111,7 +113,7 @@
     {
      "data": {
       "text/plain": [
-       "5840.78888888889"
+       "5840.788888888889"
       ]
      },
      "execution_count": 5,
@@ -122,15 +124,35 @@
    "source": [
     "p_g = cp.Variable(len(G))\n",
     "delta = cp.Variable(N)\n",
+    "constraints = [\n",
+    "    p_g >= p_min,\n",
+    "    p_g <= p_max,\n",
+    "    cp.hstack([p_g,np.zeros(len(NG))])-p_d == -B@delta\n",
+    "]\n",
     "cp.Problem(\n",
     "    cp.Minimize(cp.vec(C.T)@cp.vec(cp.vstack([(base*p_g)**n for n in range(3)]))),\n",
-    "    [\n",
-    "        p_g >= p_min,\n",
-    "        p_g <= p_max,\n",
-    "        cp.hstack([p_g,np.zeros(len(NG))])-p_d == -B@delta,\n",
-    "        cp.sum(p_g) == p_d.sum()\n",
-    "    ]\n",
+    "    constraints\n",
     ").solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-14.608, -14.608, -14.608, -14.608, -14.608])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "constraints[2].dual_value/100"
    ]
   },
   {
@@ -142,13 +164,14 @@
     "- Each load submits a demand curve. The system operator accepts the maximum-price bid until the renewable output is met.\n",
     "- Each load can consume as much power as desired.\n",
     "- For each load, elasticity is constant. That is, the marginal benefit curve for load $i$ is given by $MB_i(P)=K_iP^{\\frac{1}{e_i}}$, where $e_i<-1$ is the elasticity. Note that this formulation insures that marginal benefit is always positive.\n",
+    "- Each load $i$ has a baseline demand $\\underline{P}_i$ which it must always consume. Total benefit is measured in excess of the baseline.\n",
     "\n",
     "For simplicity, suppose each generator supplies its optimal output from the supply-side problem."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,18 +206,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For simplicity, we choose $e_1=\\dots=e_L=-1.1$. Furthermore, choose $K_i$ by taking the marginal benefit vector to be $MB(P_d^*)=\\lambda\\mathbf{1}$ where $P_d^*$ is the load vector given by PowerWorld and $\\lambda$ is set to $14.62."
+    "For simplicity, we choose $e_1=\\dots=e_L=-0.5$. Furthermore, choose $K_i$ by taking the marginal benefit vector to be $MB(P_d^*)=\\lambda\\mathbf{1}$ where $P_d^*$ is the load vector given by PowerWorld and $\\lambda$ is set to $14.62."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "e = -1.1\n",
+    "e = -0.5\n",
     "price = 14.620\n",
-    "K = price/(base*p_d[:len(L)])**(1/e)"
+    "K = price/(base*p_d[:len(L)])**(1/e)\n",
+    "p_lower = 0.45*p_d[:len(L)]"
    ]
   },
   {
@@ -207,50 +231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5847.9999997905325"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_d = cp.Variable(len(L))\n",
-    "delta = cp.Variable(N)\n",
-    "cp.Problem(\n",
-    "    cp.Maximize(cp.sum(cp.multiply(K,(base*p_d)**(1/e+1)))),\n",
-    "    [\n",
-    "        p_d >= 0,\n",
-    "        p_g-cp.hstack([p_d,np.zeros(len(NL))]) == -B@delta,\n",
-    "        cp.sum(p_d) == p_g.sum()\n",
-    "    ]\n",
-    ").solve()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The total benefit (above) and the consumption vector (below) are similar to the supply-side problem. In fact, the optimal consumptions are equal to the fixed loads from the supply-side problem (not sure why)."
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 40.00115852, 149.99657979,  80.00403935, 129.99822234])"
+       "7147.557563631506"
       ]
      },
      "execution_count": 10,
@@ -259,7 +246,65 @@
     }
    ],
    "source": [
+    "p_d = cp.Variable(len(L))\n",
+    "delta = cp.Variable(N)\n",
+    "constraints = [\n",
+    "    p_d >= p_lower,\n",
+    "    p_g-cp.hstack([p_d,np.zeros(len(NL))]) == -B@delta,\n",
+    "]\n",
+    "cp.Problem(\n",
+    "    cp.Maximize(e/(1+e)*cp.sum(cp.multiply(K,(base*p_d)**(1/e+1)-(base*p_lower)**(1/e+1)))),\n",
+    "    constraints\n",
+    ").solve()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The load dispatch and the LMPs are similar to the supply-side problem. In fact, the optimal consumptions are equal to the fixed loads from the supply-side problem (not sure why)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 39.99954055, 149.99912437,  80.0005824 , 130.00089005])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "p_d.value*base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-14.61966029, -14.61966029, -14.61966029, -14.61966029,\n",
+       "       -14.61966029])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "constraints[1].dual_value/100"
    ]
   }
  ],
