fix numerical issue

--- a/opf.ipynb
+++ b/opf.ipynb
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For simplicity, we choose $e_1=\\dots=e_L=-0.5$. Furthermore, choose $K_i$ by taking the marginal benefit vector to be $MB(P_d^*)=\\lambda\\mathbf{1}$ where $P_d^*$ is the load vector given by PowerWorld and $\\lambda$ is set to $14.62."
+    "For simplicity, we choose $e_1=\\dots=e_L=-0.2$. Furthermore, choose $K_i$ by taking the marginal benefit vector to be $MB(P_d^*)=\\lambda\\mathbf{1}$ where $P_d^*$ is the load vector given by PowerWorld and $\\lambda$ is set to $14.62."
    ]
   },
   {
@@ -215,9 +215,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "e = -0.5\n",
+    "e = -0.2\n",
     "price = 14.620\n",
-    "K = price/(base*p_d[:len(L)])**(1/e)\n",
+    "K = price/(p_d[:len(L)])**(1/e)\n",
     "p_lower = 0.45*p_d[:len(L)]"
    ]
   },
@@ -226,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solve!"
+    "Solve! To avoid numerical errors, the objective function is in per-unit, so it should not be compared to the supply-side case."
    ]
   },
   {
@@ -237,7 +237,7 @@
     {
      "data": {
       "text/plain": [
-       "7147.557563631506"
+       "341.9110165792025"
       ]
      },
      "execution_count": 10,
@@ -253,7 +253,7 @@
     "    p_g-cp.hstack([p_d,np.zeros(len(NL))]) == -B@delta,\n",
     "]\n",
     "cp.Problem(\n",
-    "    cp.Maximize(e/(1+e)*cp.sum(cp.multiply(K,(base*p_d)**(1/e+1)-(base*p_lower)**(1/e+1)))),\n",
+    "    cp.Maximize(e/(1+e)*cp.sum(cp.multiply(K,(p_d)**(1/e+1)-(p_lower)**(1/e+1)))),\n",
     "    constraints\n",
     ").solve()"
    ]
@@ -274,7 +274,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 39.99954055, 149.99912437,  80.0005824 , 130.00089005])"
+       "array([ 39.99924691, 149.99949232,  79.99975268, 130.00150794])"
       ]
      },
      "execution_count": 11,
@@ -294,8 +294,8 @@
     {
      "data": {
       "text/plain": [
-       "array([-14.61966029, -14.61966029, -14.61966029, -14.61966029,\n",
-       "       -14.61966029])"
+       "array([-14.62071111, -14.62071111, -14.62071111, -14.62071111,\n",
+       "       -14.62071111])"
       ]
      },
      "execution_count": 12,
@@ -304,8 +304,15 @@
     }
    ],
    "source": [
-    "constraints[1].dual_value/100"
+    "constraints[1].dual_value"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
