add line constraints

--- a/opf.ipynb
+++ b/opf.ipynb
@@ -55,10 +55,10 @@
     "base = 100\n",
     "\n",
     "# The load consumed at each bus\n",
-    "p_d = np.array([0, 40, 150, 80, 130])/base\n",
+    "p_d = np.array([40, 150, 80, 130])/base\n",
     "\n",
     "# Matrix defining the cost of the generators\n",
-    "# The i,j element is the coefficient of the power produced at the ith generator raised to the j-1 power\n",
+    "# The i, j element is the coefficient of the power produced at the ith generator raised to the j-1 power\n",
     "# Copied from PowerWorld\n",
     "C = np.array(\n",
     "    [\n",
@@ -68,13 +68,31 @@
     "    ]\n",
     ")\n",
     "\n",
+    "# Line constraints. The i, j element is the MVA limit of the line from bus i to bus j\n",
+    "P_line = np.array(\n",
+    "    [\n",
+    "        [0, 150, 150, 0, 0],\n",
+    "        [0, 0, 120, 100, 200],\n",
+    "        [0, 0, 0, 222, 0],\n",
+    "        [0, 0, 0, 0, 60],\n",
+    "        [0, 0, 0, 0, 0]\n",
+    "    ]\n",
+    ")\n",
+    "P_line = (P_line+P_line.T)/base\n",
+    "\n",
     "# Minimum and maximum generator outputs, taken from PowerWorld\n",
     "p_min = np.array([100, 150, 0])/base\n",
     "p_max = np.array([400, 500, 300])/base\n",
     "\n",
     "# The buses with generators and loads\n",
-    "G = [1, 2, 4]\n",
-    "L = [2, 3, 4, 5]"
+    "G = np.array([1, 2, 4])-1\n",
+    "L = np.array([2, 3, 4, 5])-1\n",
+    "\n",
+    "# Transformation matrices. These handle the change-of-variables from the load/generator spaces to the bus space.\n",
+    "AG = np.zeros((N,len(G)))\n",
+    "AG[G,:] = np.eye(len(G))\n",
+    "AL = np.zeros((N,len(L)))\n",
+    "AL[L,:] = np.eye(len(L))"
    ]
   },
   {
@@ -82,32 +100,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we'll solve the normal supply-side OPF. Re-index the problem such that the generator buses precede the non-generator buses. Within each block, keep the order the same."
+    "First, we solve conventional supply-side OPF. Confirm that the total cost is consistent with PowerWorld."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NG = [n for n in range(1,N+1) if n not in G]\n",
-    "idx = np.array(G+NG)-1\n",
-    "B = B[idx][:,idx]\n",
-    "p_d = p_d[idx]"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Solve DC OPF. Line flow limits not yet implmented, but they are not binding for this example. Confirm that the total cost is consistent with PowerWorld."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +114,7 @@
        "5840.788888888889"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,32 +125,13 @@
     "constraints = [\n",
     "    p_g >= p_min,\n",
     "    p_g <= p_max,\n",
-    "    cp.hstack([p_g,np.zeros(len(NG))])-p_d == -B@delta\n",
+    "    AG@p_g-AL@p_d == -B@delta,\n",
+    "    cp.multiply(B, delta[:,np.newaxis]-delta[np.newaxis,:]) <= P_line\n",
     "]\n",
     "cp.Problem(\n",
     "    cp.Minimize(cp.vec(C.T)@cp.vec(cp.vstack([(base*p_g)**n for n in range(3)]))),\n",
     "    constraints\n",
-    ").solve()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-14.608, -14.608, -14.608, -14.608, -14.608])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "constraints[2].dual_value/100"
+    ").solve(max_iter=30000)"
    ]
   },
   {
@@ -160,8 +139,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's solve a demand-side problem with zero marginal cost, fixed supply, and elastic demand. For this minimal example, we make the follwing assumptions:\n",
-    "- Each load submits a demand curve. The system operator accepts the maximum-price bid until the renewable output is met.\n",
+    "Now let's solve a **demand-side** problem with zero marginal cost, fixed supply, and elastic demand. For this minimal example, we make the follwing assumptions:\n",
+    "- Each load submits a demand curve. The system operator dispatches to maximize total benefit.\n",
     "- Each load can consume as much power as desired.\n",
     "- For each load, elasticity is constant. That is, the marginal benefit curve for load $i$ is given by $MB_i(P)=K_iP^{\\frac{1}{e_i}}$, where $e_i<-1$ is the elasticity. Note that this formulation insures that marginal benefit is always positive.\n",
     "- Each load $i$ has a baseline demand $\\underline{P}_i$ which it must always consume. Total benefit is measured in excess of the baseline.\n",
@@ -170,43 +149,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p_g = np.hstack([p_g.value, np.zeros(len(NG))])"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again, reindex the system, this time with the load buses preceding the non-load buses"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "B = B[idx][:,idx]\n",
-    "p_d = p_d[idx]\n",
-    "NL = [n for n in range(1,N+1) if n not in L]\n",
-    "idx = np.array(L+NL)-1\n",
-    "B = B[idx][:,idx]\n",
-    "p_g = p_g[idx]\n",
-    "p_d = p_d[idx]"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For simplicity, we choose $e_1=\\dots=e_L=-0.2$. Furthermore, choose $K_i$ by taking the marginal benefit vector to be $MB(P_d^*)=\\lambda\\mathbf{1}$ where $P_d^*$ is the load vector given by PowerWorld and $\\lambda$ is set to $14.62."
+    "To start, we choose $e_1=\\dots=e_L=-0.2$. Furthermore, choose $K_i$ by taking the marginal benefit vector to be $MB(P_d^*)=\\lambda\\mathbf{1}$ where $P_d^*$ is the load vector given by PowerWorld and $\\lambda$ is set to $14.62."
    ]
   },
   {
@@ -217,8 +164,8 @@
    "source": [
     "e = -0.2\n",
     "price = 14.620\n",
-    "K = price/(p_d[:len(L)])**(1/e)\n",
-    "p_lower = 0.45*p_d[:len(L)]"
+    "K = price/(p_d)**(1/e)\n",
+    "p_lower = 0.45*p_d"
    ]
   },
   {
@@ -237,7 +184,7 @@
     {
      "data": {
       "text/plain": [
-       "341.9110165792025"
+       "355.1334808534154"
       ]
      },
      "execution_count": 10,
@@ -250,69 +197,14 @@
     "delta = cp.Variable(N)\n",
     "constraints = [\n",
     "    p_d >= p_lower,\n",
-    "    p_g-cp.hstack([p_d,np.zeros(len(NL))]) == -B@delta,\n",
+    "    1.8*AG@p_g.value-AL@p_d == -B@delta,\n",
+    "    cp.multiply(B, delta[:,np.newaxis]-delta[np.newaxis,:]) <= P_line\n",
     "]\n",
     "cp.Problem(\n",
     "    cp.Maximize(e/(1+e)*cp.sum(cp.multiply(K,(p_d)**(1/e+1)-(p_lower)**(1/e+1)))),\n",
     "    constraints\n",
     ").solve()"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The load dispatch and the LMPs are similar to the supply-side problem. In fact, the optimal consumptions are equal to the fixed loads from the supply-side problem (not sure why)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 39.99924691, 149.99949232,  79.99975268, 130.00150794])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_d.value*base"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-14.62071111, -14.62071111, -14.62071111, -14.62071111,\n",
-       "       -14.62071111])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "constraints[1].dual_value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
