--- a/opf.ipynb
+++ b/opf.ipynb
@@ -160,7 +160,7 @@
    "source": [
     "Now let's solve a **demand-side** problem with zero marginal cost, fixed supply, and elastic demand. For this minimal example, we make the follwing assumptions:\n",
     "- Each load submits a demand curve. The system operator dispatches to maximize total utlity $U(P)$.\n",
-    "- For each load, elasticity is constant. That is, the marginal utility for load $i$ is given by $\\frac{dU_i}{dP_i}=K_iP_i^{\\frac{1}{e_i}}$, where $-e_i<0$ is the elasticity. Note that this formulation insures that marginal benefit is always positive.\n",
+    "- For each load, elasticity is constant. That is, the marginal utility for load $i$ is given by $\\frac{dU_i}{dP_i}=K_iP_i^{\\frac{1}{e_i}}$, where $e_i<0$ is the elasticity. Note that this formulation insures that marginal benefit is always positive.\n",
     "- There is no upper limit on consumption."
    ]
   },
